<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.spdx</groupId>
  <artifactId>spdx-rdf-store</artifactId>
  <version>0.0.3</version>
  <packaging>jar</packaging>

  <name>spdx-rdf-store</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
    <licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>goneall</id>
			<name>Gary O'Neall</name>
			<email>gary@sourceauditor.com</email>
			<organization>SPDX</organization>
			<organizationUrl>http://spdx.org</organizationUrl>
		</developer>
	</developers>
	<organization>
		<name>SPDX</name>
		<url>http://spdx.org</url>
	</organization>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.spdx</groupId>
    	<artifactId>java-spdx-library</artifactId>
    	<version>0.0.3</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.jena</groupId>
    	<artifactId>jena-core</artifactId>
    	<version>3.12.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.jena</groupId>
    	<artifactId>jena-arq</artifactId>
    	<version>3.12.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.jena</groupId>
    	<artifactId>jena-base</artifactId>
    	<version>3.12.0</version>
    </dependency>
  </dependencies>
    <build>
  		<resources>
			<resource>
				<targetPath>resources</targetPath>
				<filtering>false</filtering>
				<directory>resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
			<resource>
				<targetPath>META-INF</targetPath>
				<filtering>false</filtering>
				<directory>.</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<filtering>false</filtering>
				<directory>TestFiles</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</testResource>
		</testResources>
		<plugins>
		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<optimize>true</optimize>
				</configuration>
			</plugin>
		</plugins>
  </build>
    <description>This Java library implements an RDF store implementing the SPDX Java Library Storage Interface using an underlying RDF store.</description>
</project>
